versioned_docs/version-8.4/apis-tools/tasklist-api-rest/schemas/models/include-variable.mdx
---
id: include-variable
title: IncludeVariable
hide_table_of_contents: false
---

import Tabs from "@theme/Tabs";
import TabItem from "@theme/TabItem";

export const Bullet = () => (
  <>
    <span
      style={{
        fontWeight: "normal",
        fontSize: ".5em",
        color: "var(--ifm-color-secondary-darkest)",
      }}
    >
      &nbsp;●&nbsp;
    </span>
  </>
);

export const SpecifiedBy = (props) => (
  <>
    Specification
    <a
      className="link"
      style={{ fontSize: "1.5em", paddingLeft: "4px" }}
      target="_blank"
      href={props.url}
      title={"Specified by " + props.url}
    >
      ⎘
    </a>
  </>
);

export const Badge = (props) => (
  <>
    <span class={"badge badge--" + props.class}>{props.text}</span>
  </>
);

Include variables in tasks search response

<Tabs groupId="schema" defaultValue="schema" values={
[
{label:'Schema',value: 'schema'},
{label:'Example value',value: 'example'}
]
}>
<TabItem value='schema'>

```json
{
    "name": string,
}
```

</TabItem>

<TabItem value='example'>

```json
{
  "name": "variableName"
}
```

</TabItem>
</Tabs>

### Fields

#### [<code style={{ fontWeight: 'normal' }}>IncludeVariable.<b>name</b></code>](#)<Bullet />`string` <Badge class="secondary" text="non-null"/>

> The name of the variable

### Member of

[`TaskSearchRequest`](../requests/task-search-request.mdx) <Badge class="secondary" text="object"/>
